--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <title> My Eggs Login </title>
 
     <!--java files and css link-->
-    <link rel="stylesheet" href="css/login.css"/>
-    <script defer src="js/code.js"></script>
+    <link rel="stylesheet" href="login.css"/>
+    <script defer src="code.js"></script>
     <link href = 'https://fonts.googleapis.com/css?family=Abril Fatface' rel = 'stylesheet'>
     <link href = 'https://fonts.googleapis.com/css?family=Lato' rel = 'stylesheet'>
 
@@ -18,7 +18,7 @@
 <body>
 
     <!--logo in-->
-    <img id="logo" src="images/icon.png"></a>
+    <img id="logo" src="icon.png"></a>
        
 
     <!--forms for login and register-->
@@ -28,12 +28,12 @@
         <form id="login"class="form">
             <span>Login Here</span>
             <div>
-                <input type="text" class="input-field" id="username" placeholder="Enter Username" name="username" required>
+                <input type="text" class="input-field" id="loginName" placeholder="Enter Username" name="loginName" required>
                 <span>username</span>
             </div>
 
             <div>
-                <input type="text" class="input-field" id="password" placeholder="Enter Password" name="password" required>
+                <input type="text" class="input-field" id="loginPassword" placeholder="Enter Password" name="loginPassword" required>
                 <span>password</span>
             </div>
 
