--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <title> My Eggs Login </title>
 
     <!--java files and css link-->
-    <link rel="stylesheet" href="login.css"/>
-    <script defer src="code.js"></script>
+    <link rel="stylesheet" href="css/login.css"/>
+    <script defer src="js/code.js"></script>
     <link href = 'https://fonts.googleapis.com/css?family=Abril Fatface' rel = 'stylesheet'>
     <link href = 'https://fonts.googleapis.com/css?family=Lato' rel = 'stylesheet'>
 
@@ -18,7 +18,7 @@
 <body>
 
     <!--logo in-->
-    <img id="logo" src="icon.png"></a>
+    <img id="logo" src="images/icon.png"></a>
        
 
     <!--forms for login and register-->
