Updated Login/Register into one button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <html lang ="en"></html>
         <head>
             <meta charset="UTF-8">
+            <title>My Eggs Home</title>
+            <link rel="favicon" type="image/png" href="images/icon.png">
             <link rel="stylesheet" href="css/index.css">
             <link href = 'https://fonts.googleapis.com/css?family=Abril Fatface' rel = 'stylesheet'>
             <link href = 'https://fonts.googleapis.com/css?family=Lato' rel = 'stylesheet'>
@@ -10,11 +12,10 @@
             
             <section>
                 <div class = "container">
-                    <h1>My Eggs</h1>
+                    <h1><a href = "https://github.com/Nicorb02/COP4331-Contact-Manager" id = "title">My Eggs</a></h1>
                 </div>
             </section>
             
-            <img id = "logo" src = "images/icon.png">
-            <button id = "login" class = "btn1">Login</button>
-            <button id = "register" class = "btn2">Register</button>
+            <input type = "image" id = "logo" onclick = "location.href = 'index.html';" src = "images/icon.png">
+            <button onclick = "location.href = 'login.html';" id = "login" class = "btn1">Login / Register</button>
         </body>
