minor changes and fixed logo button

--- a/login.html
+++ b/login.html
@@ -13,14 +13,10 @@
     <link href = 'https://fonts.googleapis.com/css?family=Abril Fatface' rel = 'stylesheet'>
     <link href = 'https://fonts.googleapis.com/css?family=Lato' rel = 'stylesheet'>
 
+
 </head>
 
 <body>
-
-    <!--logo in-->
-    <img id="logo" src="images/icon.png"></a>
-       
-
     <!--forms for login and register-->
     <section>
     <div class="cover_div">
@@ -71,8 +67,8 @@
         </div>
 
     </div>
-</section>
+ </section>
 
-
+ <input type = "image" id = "logo" onclick = "location.href = 'index.html';" src = "images/icon.png">
 
 </body>
