Updated form text
removed username and password from underneath of input forms

--- a/login.html
+++ b/login.html
@@ -25,10 +25,11 @@
             <span>Login Here</span>
             <div>
                 <input type="text" class="input-field" id="loginName" placeholder="Enter Username" name="loginName" required>
+
             </div>
 
             <div>
-                <input type="password" class="input-field" id="loginPassword" placeholder="Enter Password" name="loginPassword" required>
+                <input type="text" class="input-field" id="loginPassword" placeholder="Enter Password" name="loginPassword" required>
             </div>
 
             <button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
@@ -55,7 +56,7 @@
                 </div>
 
                 <div>
-                    <input type="password" class="input-field" id="password" placeholder="password" name="password" required>
+                    <input type="text" class="input-field" id="password" placeholder="password" name="password" required>
                 </div>
 
                     <button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Register </button>
