--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             </div>
 
             <div>
-                <input type="text" class="input-field" id="loginPassword" placeholder="Enter Password" name="loginPassword" required>
+                <input type="password" class="input-field" id="loginPassword" placeholder="Enter Password" name="loginPassword" required>
             </div>
 
             <button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Login </button>
@@ -56,7 +56,7 @@
                 </div>
 
                 <div>
-                    <input type="text" class="input-field" id="password" placeholder="password" name="password" required>
+                    <input type="password" class="input-field" id="password" placeholder="password" name="password" required>
                 </div>
 
                     <button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Register </button>
